--- a/client/src/styles/main.less
+++ b/client/src/styles/main.less
@@ -14,6 +14,9 @@
 @bodyBG: rgba(36, 38, 39, 1);
 @containerBG: #303030;
 
+// Transition
+@bubble: cubic-bezier(0, 0.8, 0.4, 1.25);
+
 @import 'tools.less';
 @import 'base64.less';
 @import 'base.less';
